--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "next-reveal": "^1.0.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
