--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
