--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.16.0",
+    "@types/three": "^0.162.0",
     "next": "14.1.0",
     "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20",
