--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@types/three": "^0.162.0",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
