--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.162.0",
     "next": "14.1.0",
     "next-reveal": "^1.0.6",
+    "obscenity": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
